Bug 354484 - DnD one file to Trash access denied
Summary: DnD one file to Trash access denied
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
: 355337 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-28 06:04 UTC by Leslie Zhai
Modified: 2015-11-18 17:26 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leslie Zhai 2015-10-28 06:04:52 UTC
(press Ctrl+F12) goto plasmashell Desktop, Drag one file and Drop into Trash, failed to move to Trash, popup Access Forbidden dialog.

Reproducible: Always
Comment 1 David Edmundson 2015-11-03 12:27:30 UTC
As in you have the trash icon applet on your desktop or that you have a link to the trash on the folder you're showing on your desktop?

(if you're not sure a screenshot will help)

Does it work from Dolphin?
Comment 2 Leslie Zhai 2015-11-04 02:28:06 UTC
Hi David,

I have the trash icon applet on my desktop ***in folder view***, then DnD a file named test111 to Trash icon applet, shown as:
https://pbs.twimg.com/media/CS7q0tdUYAEOkdD.png

But Access denied shown as:
https://pbs.twimg.com/media/CS7qylqUYAAEOKr.png

PS: DnD a file to Trash work from Dolphin!
Comment 3 Leslie Zhai 2015-11-04 06:02:37 UTC
Drop events have broken mimeData()->urls() and text/uri-list. https://bugreports.qt.io/browse/QTBUG-47981
Comment 4 Eike Hein 2015-11-14 15:08:34 UTC
*** Bug 355337 has been marked as a duplicate of this bug. ***
Comment 5 Eike Hein 2015-11-18 17:26:14 UTC
Git commit 1b37262d13b40193eb755af9c3a9bff2d2bcec1a by Eike Hein.
Committed on 18/11/2015 at 17:26.
Pushed by hein into branch 'master'.

Resolve .desktop URLs in drop-on-item, too.

M  +17   -2    containments/desktop/plugins/folder/foldermodel.cpp

http://commits.kde.org/plasma-desktop/1b37262d13b40193eb755af9c3a9bff2d2bcec1a