Resolve .desktop URLs in drop-on-item, too.

BUG:354484